<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbars="none"
    tools:context=".main.presenter.category.CategoryFragment">

    <LinearLayout
        style="@style/FormContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="24dp"
        android:paddingBottom="24dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lyCode"
            style="@style/InputTextLayout"
            android:layout_marginTop="8dp"
            android:hint="@string/code">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCode"
                style="@style/InputEditText"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lyDesc"
            style="@style/InputTextLayout"
            android:layout_marginTop="8dp"
            android:hint="@string/desc">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDesc"
                style="@style/InputEditText"
                android:inputType="text"
                android:maxLength="10"/>

        </com.google.android.material.textfield.TextInputLayout>

        <br.com.junio.castgroup.common.component.LoadingButton
            android:id="@+id/btAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/add" />
    </LinearLayout>
</ScrollView>